# ddate

./: .gitignore  CMakeLists.txt  Makefile  README  README.org  ddate.1  ddate.c
